--- a/.githworkflowsdeploy.yml
+++ b/.githworkflowsdeploy.yml
@@ -1,30 +1,30 @@
-name: Deploy to GitHub Pages
+name: Deploy GitHub Pages
 
 on:
   push:
-    branches: [ "main" ]
-
-permissions:
-  pages: write
-  id-token: write
+    branches: ["main"]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    permissions:
+      pages: write
+      id-token: write
     steps:
       - uses: actions/checkout@v4
-
-      - name: Validate files
+      
+      - name: Verify files
         run: |
-          if [ ! -f public/index.html ]; then
-            echo "::error::❌ Arquivo index.html não encontrado!"
-            exit 1
-          fi
-
+          [ ! -f public/index.html ] && echo "::error::❌ index.html missing!" && exit 1
+          echo "✅ Files verified"
+          
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+        
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: '.'  # Agora na raiz
-
+          path: 'public'
+          
       - name: Deploy
         uses: actions/deploy-pages@v2
